PND Alerts endpoint (#437)
* Create PND Alert endpoint

* Remove regular alerts for PND authorization

---------
