# src/main/kotlin/uk/gov/justice/digital/hmpps/hmppsintegrationapi/controllers/v1/person/AlertsController.kt
@@ -36,4 +36,20 @@ class AlertsController(
     auditService.createEvent("GET_PERSON_ALERTS", mapOf("hmppsId" to hmppsId))
     return response.data.paginateWith(page, perPage)
   }
+
+  @GetMapping("{encodedHmppsId}/alerts/pnd")
+  fun getPersonAlertsPND(
+    @PathVariable encodedHmppsId: String,
+    @RequestParam(required = false, defaultValue = "1", name = "page") page: Int,
+    @RequestParam(required = false, defaultValue = "10", name = "perPage") perPage: Int,
+  ): PaginatedResponse<Alert> {
+    val hmppsId = encodedHmppsId.decodeUrlCharacters()
+    val response = getAlertsForPersonService.getAlertsForPnd(hmppsId)
+
+    if (response.hasError(UpstreamApiError.Type.ENTITY_NOT_FOUND)) {
+      throw EntityNotFoundException("Could not find person with id: $hmppsId")
+    }
+    auditService.createEvent("GET_PERSON_ALERTS_PND", mapOf("hmppsId" to hmppsId))
+    return response.data.paginateWith(page, perPage)
+  }
 }
